--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "CM MERN Portfolio Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc mocha",
     "start": "node server",
+    "installAll": "npm install && cd react-ui && npm install",
     "dev": "concurrently \"npm start\" \"cd react-ui && npm start\"",
     "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
@@ -29,5 +30,9 @@
     "express": "^4.16.4",
     "os": "^0.1.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2"
   }
 }
