--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cluster": "^0.7.7",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "nyc": "^13.3.0",
     "os": "^0.1.1",
     "path": "^0.12.7"
   },
