--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -8,7 +8,8 @@
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-spinners": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
