--- a/package.json
+++ b/package.json
@@ -25,14 +25,22 @@
   },
   "homepage": "https://github.com/cmr624/react-portfolio-site#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "cluster": "^0.7.7",
     "concurrently": "^4.1.0",
+    "connect-mongo": "^2.0.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.19",
+    "morgan": "^1.9.1",
     "nyc": "^13.3.0",
     "os": "^0.1.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
